Fix button color in dark mode

--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -460,7 +460,7 @@ form .flex-auto + input[type='submit'] {
   color: inherit;
 
   [data-dark='true'] & {
-    color: map-get($palette, white);
+    color: map-get($palette, muted);
   }
 
   &.sort-button--right {
